# data-science-projects

./: .gitignore
alzheimers-app/: .gitignore  README.me  setup.cfg
alzheimers-app/alzheimers/configs/: dataConfig.yml
alzheimers-app/alzheimers/data_ingestion/: dataloader.py  db.env  db_utils.py
alzheimers-app/alzheimers/utils/: config_loader.py  logger.py
alzheimers-app/notebooks/: 01-spm-eda.ipynb
bikeshare-app/: Dockerfile  requirements.txt
bikeshare-app/bikeshare/configs/: config.py
bikeshare-app/bikeshare/executor/: inferrer.py
bikeshare-app/bikeshare/model/: bikeshare_model.py
bikeshare-app/bikeshare/utils/: config.py
bikeshare-app/notebooks/: extra-exploration.ipynb
bikeshare-app/scripts/: main.py
bikeshare-app/streamlit/: dashboard.py
bikeshare-app/streamlit/utils/: dashboard_utils.py
emotion-classification/: README.md
heart-attack-streamlit/: README.md
heart-attack-streamlit/app/: main.py
heart-attack-streamlit/assets/: style.css
heart-attack-streamlit/model/: LogReg.pkl  main.py  pipeline.pkl  preprocessor.pkl
heart-attack-streamlit/notebook/: 01-initial-exploration.ipynb
ml-proj-employee-attrition/: dtc_clf.dot  dtc_clf_rand_search.dot
ml-proj-employee-attrition/MathLibrary/: MathFunctions.py
