[metadata]
name = alzheimers
version = 0.2
author = Surya Prakash Madichetti
author_email = surya96t@gmail.com
description = A package to analyze and predict the progression of Alzheimer disease
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = alzheimers 